# song-king

./: .gitignore  README.md  SETUP_PYTHON310.md  app.py  check_python310.py  config.py  cursor_revisar_proyecto_y_subir_cambios.md  gunicorn_config.py  manual_test.py  pyproject.toml  requirements.txt  run.py  start_server.py  tasks.py  test_format.musicxml  test_gpu.py
app/: __init__.py
app/routes/: __init__.py  api.py  main.py  score.py
app/services/: job_manager.py  song_processor.py
app/utils/: musescore.py
song_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: modern.css
templates/: index.html  interactive_score.html  layout.html
