[project]
name = "song-processor"
version = "0.5.0"
requires-python = ">=3.8,<3.12"
dependencies = [
    "Flask>=2.3.0,<3.0.0",
    "MarkupSafe>=2.1.0",
    "demucs",
    "basic-pitch",
    "numpy>=1.24.0,<1.27.0",
    "pretty_midi",
    "music21",
    "librosa",
    "scikit-learn",
    "Werkzeug>=2.3.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "tasks"]