[project]
name = "song-king"
version = "2.0.0"
requires-python = ">=3.10,<3.13"
description = "Aplicación web para separación de audio y generación de partituras usando IA"
authors = [
    {name = "Gabriel Marchanta", email = "tu-email@ejemplo.com"}
]
dependencies = [
    "Flask>=2.3.0,<3.0.0",
    "MarkupSafe>=2.1.0,<2.2.0",
    "Werkzeug>=2.3.0,<3.0.0",
    "numpy>=1.21.0,<1.26.0",
    "music21>=9.1.0,<10.0.0",
    "librosa>=0.10.0,<0.11.0",
    "scikit-learn>=1.3.0,<1.4.0",
    "pretty_midi>=0.2.10,<0.3.0",
    "demucs>=4.0.0,<5.0.0",
    "basic-pitch>=0.3.0,<0.4.0",
    "gunicorn>=20.1.0,<21.0.0",
    "gevent>=21.12.0,<22.0.0",
    "mido>=1.2.10,<2.0.0",
    "pyfluidsynth>=1.3.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=22.0.0",
    "flake8>=4.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "tasks", "config"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]